--- a/src/Components/ChatPage/ChatPage.css
+++ b/src/Components/ChatPage/ChatPage.css
@@ -1,3 +1,220 @@
 .chat-room-container {
   display: flex;
+  justify-content: center;
+  background-color: black;
+  height: 100vh;
+  color: white;
+  width: 100vw;
+  overflow: hidden;
+}
+
+.chat-room-left {
+  flex: 0.7;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: flex-end;
+  justify-content: flex-end;
+  flex-direction: column;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+  position: relative;
+}
+.chat-room-left > img {
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+  position: absolute;
+  left: 5%;
+  top: 5%;
+  z-index: 10;
+}
+
+.room-name {
+  background-color: black;
+  padding: 1rem;
+  font-size: 2rem;
+  text-align: center;
+  font-weight: 800;
+  letter-spacing: 1px;
+  position: sticky;
+  top: 0;
+  z-index: 100;
+}
+
+.chat-room-left-chats {
+  width: 70%;
+  height: 100%;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  position: relative;
+  z-index: 100;
+}
+
+.chat-room-left-chats > img {
+  background-color: white;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  width: 49%;
+  height: 100vh;
+  opacity: 0.3;
+  object-fit: cover;
+  z-index: -10;
+}
+
+.chat-room-left-chats li {
+  display: flex;
+  align-items: center;
+  margin: 1rem 0.5rem;
+  padding: 0.2rem 1rem;
+}
+
+.chat-room-left-chats li div {
+  max-width: 40%;
+  position: relative;
+  margin-right: 1rem;
+  width: fit-content;
+  min-width: 10%;
+  display: flex;
+  flex-direction: column;
+}
+
+.chat-room-left-chats li div p {
+  background-color: rgb(31, 30, 30);
+  padding: 0.5rem;
+  overflow-wrap: anywhere;
+}
+
+.chat-room-left-chats li div .admin {
+  border-radius: 0.5rem;
+}
+
+.chat-room-left-chats li div .non-user {
+  border-radius: 0.5rem;
+  border-top-left-radius: 0px;
+}
+
+.chat-room-left-chats li div .user {
+  border-radius: 0.5rem;
+  border-top-right-radius: 0px;
+}
+
+.chat-room-left-input {
+  width: 70%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 100;
+  position: relative;
+  background-color: black;
+}
+
+.chat-room-left-input form {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.chat-room-left-input input {
+  flex: 1;
+  padding: 1rem;
+  font-size: 1.1rem;
+  background-color: black;
+  color: white;
+  border: none;
+  padding-left: 1rem;
+  padding-bottom: 1rem;
+}
+
+.chat-room-left-input input:focus,
+.chat-room-left-input input:active {
+  outline: none;
+}
+
+.chat-room-left-input button {
+  padding: 0.7rem 0;
+  background: black;
+  border: none;
+  cursor: pointer;
+  color: white;
+  padding-right: 10px;
+}
+.chat-room-left-input > form > img {
+  margin-left: 0.5rem;
+  cursor: pointer;
+}
+
+.chat-room-left-chats::-webkit-scrollbar {
+  display: none;
+}
+
+.chat-room-right {
+  display: flex;
+  flex-direction: column;
+  flex: 0.3;
+  align-items: center;
+  position: relative;
+}
+
+.chat-room-right p {
+  background-color: black;
+  padding: 1rem 0;
+  margin-bottom: 1rem;
+  font-size: 2rem;
+  text-align: center;
+  border-bottom: 2px solid #00ff00;
+}
+
+.chat-room-right ul {
+  list-style: none;
+  width: 80%;
+  display: block;
+  margin: 0 auto;
+}
+.chat-room-right ul li {
+  display: flex;
+  align-items: center;
+  text-align: left;
+  padding: 0.5rem;
+  padding-left: 1rem;
+  font-size: 1.3rem;
+}
+
+.green-circle {
+  height: 10px;
+  width: 10px;
+  border-radius: 50%;
+  border: none;
+  background-color: #00ff00;
+  margin-right: 0.5rem;
+}
+
+.particles {
+  position: absolute;
+  height: 100vh;
+  width: 20%;
+  top: 0;
+  left: 0;
+  opacity: 0.4;
+}
+
+.emoji-mart-search-2,
+input {
+  background-color: black !important;
+}
+
+.emoji-mart-category-label span {
+  background-color: black !important;
+}
+
+.emoji-mart-scroll::-webkit-scrollbar {
+  display: none;
+}
+
+.emoji-mart {
+  position: absolute;
+  left: 0%;
+  bottom: 120%;
 }
