--- a/src/Components/ChatPage/ChatPage.css
+++ b/src/Components/ChatPage/ChatPage.css
@@ -57,7 +57,7 @@
   top: 0;
   bottom: 0;
   width: 49%;
-  height: 100vh;
+  height: fit-content;
   opacity: 0.3;
   object-fit: cover;
   z-index: -10;
@@ -180,6 +180,7 @@
   padding: 0.5rem;
   padding-left: 1rem;
   font-size: 1.3rem;
+  font-weight: 300;
 }
 
 .green-circle {
@@ -194,7 +195,7 @@
 .particles {
   position: absolute;
   height: 100vh;
-  width: 20%;
+  width: 25%;
   top: 0;
   left: 0;
   opacity: 0.4;
