--- a/src/Components/ChatPage/ChatPage.css
+++ b/src/Components/ChatPage/ChatPage.css
@@ -6,6 +6,7 @@
   color: white;
   width: 100vw;
   overflow: hidden;
+  position: relative;
 }
 
 .chat-room-left {
@@ -27,7 +28,7 @@
   position: absolute;
   left: 5%;
   top: 5%;
-  z-index: 10;
+  z-index: 101;
 }
 
 .room-name {
@@ -151,7 +152,7 @@
 }
 
 .chat-room-right {
-  display: flex;
+  display: flex !important;
   flex-direction: column;
   flex: 0.3;
   align-items: center;
@@ -159,20 +160,26 @@
 }
 
 .chat-room-right p {
-  background-color: black;
   padding: 1rem 0;
   margin-bottom: 1rem;
-  font-size: 2rem;
+  font-size: 1.4rem;
   text-align: center;
   border-bottom: 2px solid #00ff00;
 }
 
 .chat-room-right ul {
   list-style: none;
+  overflow: auto;
   width: 80%;
   display: block;
   margin: 0 auto;
 }
+
+.chat-room-right ul::-webkit-scrollbar {
+  display: none;
+  scroll-behavior: smooth;
+}
+
 .chat-room-right ul li {
   display: flex;
   align-items: center;
@@ -218,4 +225,129 @@ input {
   position: absolute;
   left: 0%;
   bottom: 120%;
+  height: 300px !important;
+  overflow-y: auto;
+}
+
+.user-open {
+  display: none;
+}
+
+.user-close {
+  display: none;
+}
+
+@media (max-width: 900px) {
+  .chat-room-container {
+    height: 100vh;
+  }
+
+  .chat-room-left-chats {
+    width: 100%;
+  }
+
+  .chat-room-left-chats > img {
+    width: 70%;
+  }
+
+  .room-name {
+    font-size: 1rem;
+    letter-spacing: 1px;
+  }
+
+  .chat-room-left-input {
+    width: 100%;
+  }
+
+  .chat-room-left {
+    flex: 0.7;
+  }
+
+  .chat-room-left img {
+    top: 2%;
+  }
+
+  .chat-room-right {
+    flex: 0.3;
+  }
+
+  .chat-room-right p {
+    font-size: 1rem;
+  }
+
+  .chat-room-right ul li {
+    font-size: 1rem;
+  }
+
+  .particles {
+    display: none;
+  }
+
+  .emoji-mart {
+    margin-left: 30px;
+  }
+
+  .chat-room-left {
+    flex: 1;
+  }
+  .show {
+    display: none !important;
+  }
+
+  .user-open {
+    display: block;
+    position: fixed;
+    z-index: 101;
+    top: 2%;
+    right: 5%;
+    cursor: pointer;
+  }
+
+  .user-close {
+    display: block;
+    position: fixed;
+    z-index: 110;
+    top: 2%;
+    right: 2%;
+    cursor: pointer;
+  }
+
+  .chat-room-left-chats > img {
+    width: 100%;
+  }
+
+  .chat-room-right {
+    position: absolute;
+    flex: 0;
+    min-height: 100vh;
+    background-color: black;
+    z-index: 102;
+    top: 0;
+    right: 0;
+    min-width: 50vw;
+    padding: 0 1rem;
+  }
+}
+
+@media (max-width: 400px) {
+  .chat-room-left-input input {
+    flex: 1;
+    font-size: 0.8rem;
+    padding: 0 5px;
+  }
+
+  .chat-room-left-input button {
+    font-size: 0.8rem;
+  }
+  .chat-room-left-input > form > img {
+    width: 20px;
+  }
+  .emoji-mart {
+    width: 260px !important;
+    margin-left: 5px;
+  }
+
+  .chat-room-right > p {
+    margin-top: 3vh;
+  }
 }
